fix text color in dark mode

--- a/public/fohn-ui.com.css
+++ b/public/fohn-ui.com.css
@@ -2105,6 +2105,10 @@ select {
     margin-bottom: 5rem;
 }
 
+.mb-24 {
+    margin-bottom: 6rem;
+}
+
 .mb-3 {
     margin-bottom: 0.75rem;
 }
@@ -2115,10 +2119,6 @@ select {
 
 .mb-4 {
     margin-bottom: 1rem;
-}
-
-.mb-40 {
-    margin-bottom: 10rem;
 }
 
 .mb-5 {
@@ -2415,10 +2415,6 @@ select {
 
 .mt-px {
     margin-top: 1px;
-}
-
-.mb-24 {
-    margin-bottom: 6rem;
 }
 
 .line-clamp-1 {
@@ -4831,16 +4827,16 @@ select {
     --tw-bg-opacity: 0.5;
 }
 
+.bg-gradient-to-b {
+    background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+}
+
 .bg-gradient-to-br {
     background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
 }
 
 .bg-gradient-to-r {
     background-image: linear-gradient(to right, var(--tw-gradient-stops));
-}
-
-.bg-gradient-to-b {
-    background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
 
 .from-blue-400 {
@@ -5241,6 +5237,11 @@ select {
     --tw-gradient-stops: var(--tw-gradient-from), #b45309 var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
 
+.to-gray-100 {
+    --tw-gradient-to: #f5f5f5 var(--tw-gradient-to-position);
+    --tw-gradient-to-position:  ;
+}
+
 .to-purple-400 {
     --tw-gradient-to: #c084fc var(--tw-gradient-to-position);
     --tw-gradient-to-position:  ;
@@ -5248,11 +5249,6 @@ select {
 
 .to-sky-300 {
     --tw-gradient-to: #7dd3fc var(--tw-gradient-to-position);
-    --tw-gradient-to-position:  ;
-}
-
-.to-gray-100 {
-    --tw-gradient-to: #f5f5f5 var(--tw-gradient-to-position);
     --tw-gradient-to-position:  ;
 }
 
@@ -6043,16 +6039,16 @@ select {
     padding-top: 5rem;
 }
 
+.pt-24 {
+    padding-top: 6rem;
+}
+
 .pt-3 {
     padding-top: 0.75rem;
 }
 
 .pt-3\.5 {
     padding-top: 0.875rem;
-}
-
-.pt-32 {
-    padding-top: 8rem;
 }
 
 .pt-4 {
@@ -6085,10 +6081,6 @@ select {
 
 .pt-px {
     padding-top: 1px;
-}
-
-.pt-24 {
-    padding-top: 6rem;
 }
 
 .text-left {
@@ -16021,6 +16013,11 @@ select {
         border-color: rgb(255 255 255 / 0.05);
     }
 
+    .dark\:border-gray-200 {
+        --tw-border-opacity: 1;
+        border-color: rgb(229 229 229 / var(--tw-border-opacity));
+    }
+
     .dark\:bg-gray-300 {
         --tw-bg-opacity: 1;
         background-color: rgb(212 212 212 / var(--tw-bg-opacity));
@@ -16042,6 +16039,30 @@ select {
 
     .dark\:bg-gray-900\/70 {
         background-color: rgb(23 23 23 / 0.7);
+    }
+
+    .dark\:bg-gray-100 {
+        --tw-bg-opacity: 1;
+        background-color: rgb(245 245 245 / var(--tw-bg-opacity));
+    }
+
+    .dark\:bg-gray-200 {
+        --tw-bg-opacity: 1;
+        background-color: rgb(229 229 229 / var(--tw-bg-opacity));
+    }
+
+    .dark\:bg-gray-600 {
+        --tw-bg-opacity: 1;
+        background-color: rgb(82 82 82 / var(--tw-bg-opacity));
+    }
+
+    .dark\:bg-gray-700 {
+        --tw-bg-opacity: 1;
+        background-color: rgb(64 64 64 / var(--tw-bg-opacity));
+    }
+
+    .dark\:bg-gray-700\/50 {
+        background-color: rgb(64 64 64 / 0.5);
     }
 
     .dark\:from-blue-700 {
@@ -16088,6 +16109,16 @@ select {
     .dark\:text-white {
         --tw-text-opacity: 1;
         color: rgb(255 255 255 / var(--tw-text-opacity));
+    }
+
+    .dark\:text-gray-800 {
+        --tw-text-opacity: 1;
+        color: rgb(38 38 38 / var(--tw-text-opacity));
+    }
+
+    .dark\:text-purple-800 {
+        --tw-text-opacity: 1;
+        color: rgb(107 33 168 / var(--tw-text-opacity));
     }
 
     .dark\:opacity-60 {
@@ -18833,12 +18864,12 @@ select {
         gap: 1.5rem;
     }
 
-    .sm\:gap-px {
-        gap: 1px;
-    }
-
     .sm\:gap-8 {
         gap: 2rem;
+    }
+
+    .sm\:gap-px {
+        gap: 1px;
     }
 
     .sm\:gap-x-0 {
@@ -23694,12 +23725,12 @@ select {
         padding-top: 0.875rem;
     }
 
-    .md\:pt-4 {
-        padding-top: 1rem;
+    .md\:pt-32 {
+        padding-top: 8rem;
     }
 
-    .md\:pt-44 {
-        padding-top: 11rem;
+    .md\:pt-4 {
+        padding-top: 1rem;
     }
 
     .md\:pt-5 {
@@ -23724,10 +23755,6 @@ select {
 
     .md\:pt-px {
         padding-top: 1px;
-    }
-
-    .md\:pt-32 {
-        padding-top: 8rem;
     }
 
     .md\:text-left {
